crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__macro_11.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/macros.rs
assertion_line: 216
expression: "goto_definition(r#\"\n%! main.sp\n#define FOO(%1) int %1; %1 = 10;\nvoid main() {\n    FOO(foo)\n         |\n         ^\n}\n\"#,)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 11
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 11
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 11
      }
    }
  }
]
