crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__macro_5.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/macros.rs
assertion_line: 107
expression: "goto_definition(r#\"\n%! main.sp\n#define FOO(%1)    %1\nint foo;\nint bar = FOO( foo )\n                |\n                ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 15
      },
      "end": {
        "line": 2,
        "character": 18
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    }
  }
]
