crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__macro_7.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/macros.rs
assertion_line: 135
expression: "goto_definition(r#\"\n%! main.sp\n#define FOO(%1,%2)    %1 +     %2\n#define BAAAAAR bar\nint foo;\nint bar;\nint baz = BAAAAAR + FOO( foo    , bar );\n                                   |\n                                   ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 4,
        "character": 34
      },
      "end": {
        "line": 4,
        "character": 37
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 3,
        "character": 4
      },
      "end": {
        "line": 3,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 3,
        "character": 4
      },
      "end": {
        "line": 3,
        "character": 7
      }
    }
  }
]
