crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__preprocessor_disable_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/macros.rs
assertion_line: 210
expression: "goto_definition(r#\"\n%! main.sp\n#define FOO\n#if defined FOO\nint foo;\n#endif\nvoid bar() {\n    foo = 1;\n     |\n     ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 5,
        "character": 4
      },
      "end": {
        "line": 5,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 2,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 2,
        "character": 7
      }
    }
  }
]
