crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__preprocessor_offsetting_5.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/macros.rs
assertion_line: 166
expression: "goto_definition(r#\"\n%! main.sp\n#define FOOOOOOOOOOOOOOO foo\nint foo;\nint baz;\nint bar = FOOOOOOOOOOOOOOO + FOOOOOOOOOOOOOOO + baz;\n                                                 |\n                                                 ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 3,
        "character": 48
      },
      "end": {
        "line": 3,
        "character": 51
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 2,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 2,
        "character": 7
      }
    }
  }
]
